--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <div id="feedback-message" class="feedback-message label" role="alert" aria-live="polite">
                                 <!-- Feedback will be displayed here -->
                             </div>  
-                            
+
                             <form id="guess-form">
                                 <div class="form-group">
                                     <label for="guess-input " class="visually-hidden">Your guess</label>
@@ -49,7 +49,7 @@
                                     >
                                 </div>
 
-                                <button type="submit" id="submit-btn">Submit</button>
+                                <button type="submit" id="submit-btn" class="btn">Submit</button>
                             </form>
                         </div>
                     </div>
@@ -61,12 +61,12 @@
                         </div>
 
                         <div class="result-answer">
-                            <p class="answer-label">The answer was</p>
-                            <p id="result-category" class="answer-value"></p>
+                            <p class="answer-label jumbo">The answer was</p>
+                            <p id="result-category" class="answer-value jumbo"></p>
                         </div>
 
                         <div class="results-actions">
-                            <button id="next-puzzle-btn" class="action-btn">Next Puzzle</button>
+                            <button id="next-puzzle-btn" class="btn">Play Next</button>
                         </div>
                     </div>
 
