Fixes bug with first clue

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                             <div class="game-stats">
                                 <span class="clue-counter label">
-                                    <span id="clue-count">1</span> / 5 guesses
+                                    <span id="clue-count">1</span> / 5 clues
                                 </span>
                             </div>
                             <div id="feedback-message" class="feedback-message label" role="alert" aria-live="polite">
