--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                     <div class="playing-content">
 
                         <div class="clues-wrapper">
-                            <h1 class="label">Guess the category</h1>
+
+                            <div class="header">
+                                <h1 class="label">Guess the category</h1>
+                            </div>
+
                             <div class="clue-section">
                                 <div id="clues-container" class="clues-container jumbo">
                                     <!-- Clues will be dynamically inserted here -->
@@ -67,6 +71,16 @@
 
                         <div class="results-actions">
                             <button id="next-puzzle-btn" class="btn">Play Next</button>
+                        </div>
+                    </div>
+
+                    <!-- Completion State Content -->
+                    <div class="completion-content">
+                        <div class="completion-message jumbo">
+                            Time to find your present
+                        </div>
+                        <div class="completion-actions">
+                            <button id="restart-btn" class="btn">Restart</button>
                         </div>
                     </div>
 
