Adds final screen

--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
 
                     <!-- Completion State Content -->
                     <div class="completion-content">
+                        <div id="confetti-container" class="confetti-container"></div>
                         <div class="completion-message jumbo">
                             Time to find your present
-                        </div>
-                        <div class="completion-actions">
-                            <button id="restart-btn" class="btn">Restart</button>
                         </div>
                     </div>
 
