Adjustments for mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     <title>Pinpoint Game</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -49,11 +49,12 @@
                                         id="guess-input"
                                         placeholder="Your guess"
                                         autocomplete="off"
+                                        enterkeyhint="go"
                                         required
                                     >
                                 </div>
 
-                                <button type="submit" id="submit-btn" class="btn">Submit</button>
+                                <button type="submit" id="submit-btn" class="btn submit-btn">Submit</button>
                             </form>
                         </div>
                     </div>
