Responsiveness new fixes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
 
                         <div class="results-actions">
-                            <button id="next-puzzle-btn" class="btn">Play Next</button>
+                            <button id="next-puzzle-btn" class="btn">Next</button>
                         </div>
                     </div>
 
@@ -79,7 +79,7 @@
                     <div class="completion-content">
                         <div id="confetti-container" class="confetti-container"></div>
                         <div class="completion-message jumbo">
-                            Time to find your present
+                            Time to find your present!
                         </div>
                     </div>
 
