--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <div class="clues-wrapper">
 
                             <div class="header">
-                                <h1 class="label">Guess the category</h1>
+                                <h1 class="label">Definitely not pinpoint</h1>
                             </div>
 
                             <div class="clue-section">
@@ -80,7 +80,7 @@
                     <div class="completion-content">
                         <div id="confetti-container" class="confetti-container"></div>
                         <div class="completion-message jumbo">
-                            Time to find your present!
+                            You have all the clues now. Time to find your gift!
                         </div>
                     </div>
 
