Content changes, gitignores some directories

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                             <form id="guess-form">
                                 <div class="form-group">
-                                    <label for="guess-input " class="visually-hidden">Your guess</label>
+                                    <label for="guess-input " class="visually-hidden">Write your guess</label>
                                     <input
                                         type="text"
                                         class="jumbo"
